--- a/app/templates/autentificare.html
+++ b/app/templates/autentificare.html
@@ -4,8 +4,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Sneakers Ro | Sign Up/ Log in</title>
-	<link rel="stylesheet" href="styleautentif.css">
-	<script src="snro.js" defer></script>
+	<link rel="stylesheet" href="../static/css/styleautentif.css">
+	<script src="../static/js/snro.js" defer></script>
 </head>
 <body>
 	<div id="loading-screen">
@@ -25,14 +25,9 @@
 		<div class="right">
 			<div class="box">
 				<form autocomplete="off">
-					<h2>Inregistrare</h2>
+					<h2>Autentificare</h2>
 					<div class="inputBox">
 						<input type="text" required="required">
-						<span>Nume de utilizator</span>
-						<i></i>
-					</div>
-					<div class="inputBox">
-						<input type="password" required="required">
 						<span>Email</span>
 						<i></i>
 					</div>
@@ -41,12 +36,8 @@
 						<span>Parola</span>
 						<i></i>
 					</div>
-					<div class="inputBox">
-						<input type="password" required="required">
-						<span>Repeta Parola</span>
-						<i></i>
-					</div>
 					<div class="links">
+						<a href="#">Ați uitat parola?</a>
 						<a href="inregistrare.html">Înregistrare</a>
 					</div>
 					<input type="submit" value="Autentificare">
