--- a/app/templates/barbati.html
+++ b/app/templates/barbati.html
@@ -3,14 +3,15 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sneakers Ro | COPII</title>
-    <link rel="stylesheet" href="style1.css">
-    <link rel="stylesheet" href="stylefooter.css">
+    <title>Sneakers Ro | BARBAȚI</title>
+    <link rel="stylesheet" href="../static/css/style1.css">
+    <link rel="stylesheet" href="../static/css/stylefooter.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <script src="loading.js" defer></script>
-    <script src="snro.js" defer></script>
-    <script src="filter.js" defer></script>
+    <script src="../static/js/loading.js" defer></script>
+    <script src="../static/js/snro.js" defer></script>
+    <script src="../static/js/filter.js" defer></script>
+
   </head>
 
   <body>
@@ -18,6 +19,7 @@
       <div class="spinner"></div>
     </div>
   <div class="header">
+
     <div class="overlay"></div>
     <div class="mobile-menu">
       <button class="close-menu">✕</button>
@@ -30,7 +32,6 @@
         <li><a href="autentificare.html">AUTENTIFICARE</a></li>
       </ul>
     </div>
-
     <div class="container">
       <div class="navbar">
         <a href="sneakersro.html" class="logoa">
@@ -58,8 +59,9 @@
             <li class="inreg"><a href="autentificare.html">AUTENTIFICARE</a></li>
           </ul>
         </nav>
-        <a href="cos.html"><img src="imagini/cart.png" width="30" height="30" alt=""></a>
-        <img src="imagini/menu.png" class="menu-icon" alt="">
+       
+          <a href="cos.html"><img src="imagini/cart.png" class="cart" width="30" height="30" alt="Cart"></a>
+          <img src="imagini/menu.png" class="menu-icon" alt="">
         <a href="autentificare.html" class="signup">Înregistrare/ Autentificare</a>
       </div>
     </div>
@@ -79,7 +81,6 @@
           <option value="nike">Nike</option>
           <option value="adidas">Adidas</option>
           <option value="nb">New Balance</option>
-          <option value="converse">Converse</option>
           
         </select>
         <select id="colorFilter" onchange="filterProducts('color')">
@@ -87,18 +88,18 @@
           <option value="white">Alb</option>
           <option value="blue">Albastru</option>
           <option value="black">Negru</option>
-          
+         
         </select>
         
       </div>
           <div class="row">
             <div class="col-4">
-                <div class="produs" data-price="250" data-brand="nike" data-color="white">
-                <img src="imagini/huara.png" alt="">
+                <div class="produs" data-price="599" data-brand="nb" data-color="white">
+                <a href="detalii-produs.html"><img src="imagini/nbgrey.png" alt=""></a>
                 </div>
                 <div class="titluprod">
-                <h4>Nike Huarache Run (PS)</h4>
-                <h5>White</h5>
+                <a href="detalii-produs.html"><h4>New Balance 550</h4></a>
+                <h5>Grey</h5>
                 </div>
              <div class="rating">
               <i class="fa fa-star"></i>
@@ -107,15 +108,15 @@
               <i class="fa fa-star"></i>
               <i class="fa fa-star"></i>
             </div>
-              <p>250 RON</p>
+              <p>599 RON</p>
             </div>
             <div class="col-4">
-              <div class="produs" data-price="199" data-brand="converse" data-color="white">
-                <img src="imagini/conv.png" alt="">
+              <div class="produs" data-price="699" data-brand="nb" data-color="white">
+                <img src="imagini/nbwhite.png" alt="">
                 </div>
                 <div class="titluprod">
-                  <h4>Converse </h4>
-                  <h5>x Peanuts Chuck Taylor</h5>
+                  <h4>New Balance 550</h4>
+                  <h5>White</h5>
                   </div>
               <div class="rating">
                 <i class="fa fa-star"></i>
@@ -123,18 +124,16 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
-                
               </div>
-                <p>199 RON</p>
+                <p>699 RON</p>
               </div>
               <div class="col-4">
-                <div class="produs" data-price="329" data-brand="nb" data-color="blue">
-                  <img src="imagini/nbcopii.png" alt="">
+                <div class="produs" data-price="1650" data-brand="adidas" data-color="white">
+                  <img src="imagini/yeezy350.png" alt="">
                   </div>
                   <div class="titluprod">
-                    <h4>New Balance 530</h4>
-                    <h5>Blue</h5>
-                    <br>
+                    <h4>Yeezy 350 v2</h4>
+                    <h5>Bone</h5>
                     </div>
                 <div class="rating">
                   <i class="fa fa-star"></i>
@@ -143,7 +142,7 @@
                   <i class="fa fa-star"></i>
                   <i class="fa fa-star"></i>
                 </div>
-                  <p>329 RON</p>
+                  <p>1650 RON</p>
                 </div>
                 
                 
@@ -158,7 +157,7 @@
         <div class="footer-col">
           <h4>companie</h4>
           <ul>
-            <li><a href="#">despre noi</a></li>
+            <li><a href="desprenoi.html">despre noi</a></li>
             <li><a href="#">seviciile noastre</a></li>
             <li><a href="#">Politica de confidențialitate</a></li>
             <li><a href="#">
