--- a/app/templates/cos.html
+++ b/app/templates/cos.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sneakers Ro | Acasă</title>
-    <link rel="stylesheet" href="style1.css">
-    <link rel="stylesheet" href="stylefooter.css">
-    <link rel="stylesheet" href="stylecos.css">
+    <title>Sneakers Ro | Coșul Tău</title>
+    <link rel="stylesheet" href="../static/css/style1.css">
+    <link rel="stylesheet" href="../static/css/stylefooter.css">
+    <link rel="stylesheet" href="../static/css/stylecos.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <script src="loading.js" defer></script>
-    <script src="snro.js" defer></script>
-    <script src="cos.js" defer></script>
+    <script src="../static/js/loading.js" defer></script>
+    <script src="../static/js/snro.js" defer></script>
+    <script src="../static/js/cos.js"></script>
 </head>
 <body>
     <div id="loading-screen">
