--- a/app/templates/desprenoi.html
+++ b/app/templates/desprenoi.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sneakers Ro | Acasă</title>
-    <link rel="stylesheet" href="style1.css">
-    <link rel="stylesheet" href="stylefooter.css">
+    <link rel="stylesheet" href="../static/css/style1.css">
+    <link rel="stylesheet" href="../static/css/stylefooter.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <script src="loading.js"></script>
-    <script src="snro.js"></script>
+    <script src="../static/js/loading.js" defer></script>
+    <script src="../static/js/snro.js" defer></script>
+    <script src="../static/js/filter.js" defer></script>
   </head>
 
   <body>
