--- a/app/templates/sneakersro.html
+++ b/app/templates/sneakersro.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Sneakers Ro | Acasă</title>
-    <link rel="stylesheet" href="style1.css">
-    <link rel="stylesheet" href="stylefooter.css">
+    <link rel="stylesheet" href="../static/css/style1.css">
+    <link rel="stylesheet" href="../static/css/stylefooter.css">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.2.1/css/fontawesome.min.css">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
-    <script src="loading.js" defer></script>
-    <script src="snro.js" defer></script>
+    <script src="../static/js/loading.js" defer></script>
+    <script src="../static/js/snro.js" defer></script>
+    <script src="../static/js/filter.js" defer></script>
   </head>
 
   <body>
+    <div id="loading-screen">
+      <div class="spinner"></div>
+    </div>
     
-<div class="header">
-  <div id="loading-screen">
-    <div class="spinner"></div>
-</div>
-<div class="overlay"></div>
+    <div class="overlay"></div>
     <div class="mobile-menu">
       <button class="close-menu">✕</button>
       <ul>
@@ -31,7 +31,14 @@
         <li><a href="contact.html">CONTACT</a></li>
         <li><a href="autentificare.html">AUTENTIFICARE</a></li>
       </ul>
+      <div class="mobile-cart">
+        <a href="cos.html">COȘ DE CUMPĂRĂTURI <i class="fas fa-shopping-cart"></i></a>
+      </div>
     </div>
+
+<div class="header">
+
+
     <div class="container">
       <div class="navbar">
         <a href="sneakersro.html" class="logoa">
@@ -41,12 +48,12 @@
           </div>
         </a>
         <div class="search-container">
-          <i class="fas fa-search search-toggle"></i>
-          <input type="text" placeholder="Caută produse...">
-          <!-- search-close icon will be added by JavaScript -->
-      </div>
+            <i class="fas fa-search search-toggle"></i>
+            <input type="text" placeholder="Caută produse...">
+            <!-- search-close icon will be added by JavaScript -->
+        </div>
         <nav>
-          <ul id = "MenuItems">
+          <ul id="MenuItems">
             <li><a href="sneakersro.html">ACASĂ</a></li>
             <li><a href="barbati.html">BARBAȚI</a></li>
             <li><a href="femei.html">FEMEI</a></li>
@@ -55,25 +62,32 @@
             <li class="inreg"><a href="autentificare.html">AUTENTIFICARE</a></li>
           </ul>
         </nav>
-        <a href="cos.html"><img src="imagini/cart.png" width="30" height="30" alt=""></a>
+        <a href="cos.html"><img src="imagini/cart.png" width="30" height="30" class="cart-icon" alt=""></a>
         <img src="imagini/menu.png" class="menu-icon" alt="">
         <a href="autentificare.html" class="signup">Înregistrare/ Autentificare</a>
       </div>
-      <div class="row2">
-        <div class="col-2.1">
-          <div class="intrebare">
-          <h1>Pentru cine cauti sneakerși?</h1>
-          </div>
-          <div class="raspu">
-          <a href="barbati.html" class="btn2"><h4>BARBATI</h4></a>
-          <a href="femei.html" class="btn2"><h4>FEMEI</h4></a>
-          <a href="copii.html" class="btn2"><h4>COPII</h4></a>
-          </div>
-          
-
-
+      <div class="mobile-search-container">
+        <i class="fas fa-search search-icon"></i>
+        <input type="text" placeholder="Caută produse...">
+      </div>
+      <div class="row">
+        <div class="col-2">
+          <h1>Cea mai importantă parte a unei ținute o constituie<br> <h1 class="incaltamintea">Încălțămintea.</h1></h1>
+          <p>Prin urmare, este important să acorzi o atenție deosebită în alegerea acesteia.<br> Din fericire, La SneakersRo găsești încălțăminte și sneakerși de care îți va fi greu să stai departe. </p>
+          <a href="intrebare.html" class="btn">Explorează</a>
         </div>
-        
+        <div class="col-2">
+          <img src="imagini/colectie.jpg" alt="" >
+        </div>
+      </div>
+      
+      <div class="despre-row">
+        <div class="despre-container">
+          <div class="despre-text">
+            <h2>Despre noi</h2>
+            <p>SneakersRo este magazinul tău online dedicat culturii sneakers din România. Cu o selecție atent aleasă de modele premium și ediții limitate, ne propunem să aducem cele mai căutate și autentice perechi de sneakerși direct la tine. Pasiunea noastră pentru streetwear și înțelegerea profundă a culturii sneakers ne diferențiază și ne motivează să oferim cea mai bună experiență de cumpărare pentru comunitatea noastră.</p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -86,7 +100,7 @@
            <div class="footer-col">
              <h4>companie</h4>
              <ul>
-               <li><a href="#">despre noi</a></li>
+               <li><a href="desprenoi.html">despre noi</a></li>
                <li><a href="#">seviciile noastre</a></li>
                <li><a href="#">Politica de confidențialitate</a></li>
                <li><a href="#">
@@ -121,5 +135,3 @@
   </body>
 
 </html>
-
-
