Update navigation links to point to index.html and remove obsolete trimis.html file

--- a/app/templates/barbati.html
+++ b/app/templates/barbati.html
@@ -24,7 +24,7 @@
     <div class="mobile-menu">
       <button class="close-menu">✕</button>
       <ul>
-        <li><a href="sneakersro.html">ACASĂ</a></li>
+        <li><a href="index.html">ACASĂ</a></li>
         <li><a href="barbati.html">BARBAȚI</a></li>
         <li><a href="femei.html">FEMEI</a></li>
         <li><a href="copii.html">COPII</a></li>
@@ -34,7 +34,7 @@
     </div>
     <div class="container">
       <div class="navbar">
-        <a href="sneakersro.html" class="logoa">
+        <a href="index.html" class="logoa">
           <div class="logo">
             <h1>SneakersRo</h1>
             <img src="imagini/shoe-svgrepo-com.svg" class="logo-icon" alt="logo">
