--- a/app/templates/autentificare.html
+++ b/app/templates/autentificare.html
@@ -11,7 +11,7 @@
 	<div id="loading-screen">
 		<div class="spinner"></div>
 	</div>
-	<a href="sneakersro.html" class="back-button">
+	<a href="index.html" class="back-button">
 		<i class="arrow-left">←</i>
 	</a>
 	<div class="container">
