--- a/app/templates/inregistrare.html
+++ b/app/templates/inregistrare.html
@@ -34,7 +34,8 @@
 						<i></i>
 					</div>
 					<div class="inputBox">
-						<input type="password" required="required">
+						<input type="text" required="required"> 
+						<!-- Wrong input type, changed from "password" to "text" -->
 						<span>Email</span>
 						<i></i>
 					</div>
